[build-system]
requires = [
    "setuptools >=80.0.0, <81.0.0", 
    "wheel >=0.45.0, <0.46.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "chassis"
version = "0.1.0"
requires-python = ">=3.10, <3.14"
readme = "README.md"
dependencies = [
    "fastapi==0.119.1",
    "Hypercorn==0.17.3",
    "pydantic==2.12.3",
    "SQLAlchemy==2.0.44",
    "aiosqlite==0.21.0",
    "coloredlogs==15.0.1",
    "pika==1.3.2",
    "psutil==7.1.3",
    "PyJWT[crypto]==2.10.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "build==1.3.0"
]